--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "core-js": "^3.8.3",
+    "vconsole": "^3.15.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "wpk-reporter": "^0.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
