--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.3.6",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.4",
+    "vant": "^2.12.54",
     "vconsole": "^3.15.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
